# agisa_sac

./: # ✅ Mindlink Core – Execution Checklist (MVP Roadmap)  .coveragerc  .env.example  .flake8  .gitattributes  .gitignore  .markdownlint.json  .orchestrator_agisa-sac-refactor.json  .pre-commit-config.yaml  .shellrc  404.html  AGENTS.md  AGI_SAC_Phase_3.5_Main_Code.py  CHANGELOG.md  CITATION_GUIDE.md  CLAUDE.md  CONCORD.md  CONTRIBUTING.md  DEV_AGENT_README.md  DOCENT_TRACING_GUIDE.md  DOCUMENTATION_REALIGNMENT_SUMMARY.md  FIGURE_CATALOG.md  FINAL_COMPLETION_GUIDE.md  GUI_IMPLEMENTATION_SUMMARY.md  GUI_README.md  LICENSE  LICENSE.docs.md  MERGE_NOTES.md  Makefile  Mindlink paper.docx  PACKAGE_SUMMARY.md  PHASE1_VALIDATION_RESULTS.md  POETRY_MIGRATION.md  POETRY_SUCCESS.md  PRODUCTION_PROGRESS.md  PRODUCTION_READINESS_AUDIT.md  PR_SUBMISSION_GUIDE.md  README.md  README_DEPLOY.md  README_IMPLEMENTATION.md  (+30 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: safety_design_decision.md
.github/workflows/: auto-fix-ci.yml  ci.yml  diagram-build.yml  docs-structure-check.yml  pages.yml  pytest.yml
.skills/dev-orchestration/: README.md
CITATION_GUIDE/: index.html
CLAUDE/: index.html
CONTRIBUTING/: index.html
FIGURE_CATALOG/: index.html
LICENSE.docs/: index.html
Mindlink_Paper/: index.html
PROJECT_README/: index.html
README_FULL_AGI_SAC_v1.0.3/: index.html
README_IMPLEMENTATION/: index.html
REFACTORING_STRATEGY/: index.html
REFACTORING_SUMMARY/: index.html
START_HERE/: index.html
STRANGLER_FIG_FIRST_TRANSPLANT_LESSONS/: index.html
TODO/: index.html
agentic_swarm_whitepaper/: index.html
api/agisa_sac/: index.html
archive/PACKAGE_SUMMARY/: index.html
archive/Proposed Project Directory Structure/: index.html
archive/This_Chat_Full_Transcript/: index.html
archive/team/: index.html
archived/: CLAUDE.md  CONTRIBUTING.md  TODO.md
archived/discussions/: visual-enhancement-conversation-2025-10.md
archived/package-snapshots/: PACKAGE_TREE_v1.0.0_2025-10.txt
archived/quickstarts/: figure-reconciliation-quickstart-2025.md
cloud/api/: simulation_api.py
cloud/functions/: evaluator_function.py  planner_function.py
cloud/run/: agent_runner.py  task_dispatcher.py
cloud_services/: index.html
concord/: index.html
concord/architecture/: index.html
concord/circuits/: index.html
concord/elliot_clause/: index.html
concord/empathy/: index.html
concord/ethics/: index.html
concord/integration/: index.html
concord/observability/: index.html
config/: concord.yaml
containers/: Dockerfile.edge
containers/chaos_gremlin/: Dockerfile
containers/enhanced_agent/: Dockerfile
containers/resonance_chronicler/: Dockerfile
containers/satori_detector/: Dockerfile
containers/tal/: Dockerfile
deployment/: index.html
distributed_agent/: index.html
docs/: BEHAVIORAL_CONTRACTS.md  CITATION_GUIDE.md  CLAUDE.md  CONCORD.md  CONCORD_RESTRUCTURE_SUMMARY.md  CONTRIBUTING_DOCS.md  FIGURE_CATALOG.md  GEMINI.md  Mindlink_Paper.md  PROJECT_README.md  README.md  README_FULL_AGI_SAC_v1.0.3.md  README_IMPLEMENTATION.md  REFACTORING_STRATEGY.md  REFACTORING_SUMMARY.md  START_HERE.md  STRANGLER_FIG_FIRST_TRANSPLANT_LESSONS.md  agentic_swarm_whitepaper.md  cloud_services.md  deployment.md  distributed_agent.md  docs_index.md  funding_breakdown.md  gcp_setup.md  gui_design.md  gui_spec.md  index.md  pcp_api.md  summary.md
docs/_historical/: DOWNLOAD_INSTRUCTIONS.txt  INDEX.md  README.md  README_IMPLEMENTATION.md  agentic_swarm_whitepaper.md  index.md  risk_and_mitigation.md  summary.md
docs/api/: agisa_sac.md
docs/archive/: Proposed Project Directory Structure.md  This_Chat_Full_Transcript.md  team.md
docs/concord/: RESTRUCTURE_SUMMARY.md  architecture.md  circuits.md  continuity_thresholds.md  elliot_clause.md  empathy.md  ethics.md  index.md  integration.md  observability.md
docs/figs/: README.md  captions.yaml
docs/gallery/: figure0.md  figure1.md  figure2.md  figure3.md  figure4.md  figure5.md  figure6.md  figure7.md  index.md
docs/governance/: evidence_package_schema.md  meta_concord_mcx.md  mv_enforcement_layer.md  threat_model.md
docs/services/: agent_runner.md  evaluator_function.md  planner_function.md  simulation_api.md  task_dispatcher.md
examples/: distributed_agent_example.py  docent_tracing_example.py  mcx_governance_demo.py  multi_agent_voice_colab.py  sample_transcript.json
examples/analysis/: mindlink_analysis_export.json  mindlink_chaos_report_data.json  mindlink_full_report.json
examples/configs/: config.json  config_large.json  config_medium.json  config_quick_test.json
examples/scripts/: golden_contagion_experiment.py
figs/: index.html
figs/src/: figure2_mapper.dot  figure3_network.mmd  figure4_convergence.mmd  figure5_identity.mmd  figure6_workflow.mmd
functions/scroll_export/: main.py
functions/time_pulse/: main.py
funding_breakdown/: index.html
gallery/: index.html
gallery/figure0/: index.html
gallery/figure1/: index.html
gallery/figure2/: index.html
gallery/figure3/: index.html
gallery/figure4/: index.html
gcp_setup/: index.html
infra/gcp/: deploy_vm.sh  (+3 more)
mindlink_infra/: README.md  __init__.py  api.py  pubsub.py  registry.py
monitoring/: README.md  prometheus.yml
observability/: .env.example  README.md
pcp_api/: index.html
risk_and_mitigation/: index.html
roadmap/: timeline.md
scripts/: AGI_SAC_Phase_3.5_Main_Code.py  Makefile  build_paper.sh  chaos_orchestrator.py  orchestrator.py  sim_runner.py
search/: search_index.json
site/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
summary/: index.html
tests/: conftest.py  sim_runner.py  test_chronicler.py  test_cloud_services.py  test_cognitive.py  test_gcp_imports.py  test_memory.py  test_multi_agent_system.py  test_resonance.py  test_systems.py
validation/: QUICKWIN_SWEEP_COMPLETE.md  TESTING_PHASE_COMPLETE.md  cli_validator.py  coverage_analysis.md  preset_validator.py  serialization_audit.py
web/: package-lock.json  package.json
(+272 files in other folders)
